This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

31-Mar-2004 (Lars Duening)  (3.2.10-dev.620)
  - (prolang.y) Corrected range check regarding short integers (thanks,
       Gnomi).
  - (comm.c, pkg-mccp.c, mregex.c, structs.c) Removed warnings (thanks,
       Andre!).

30-Mar-2004 (Lars Duening)  (3.3.505)
  - (func_spec) The result type of m_entry() was specified as 'mapping'
       instead of the correct 'mixed *' (thanks, Heiko!).
  - (random.c) Updated the Mersenne twister to the version with improved
       initialization (thanks, Fini, for the link).

27-Mar-2004 (Lars Duening)  (3.3.504)
  - (mstrings, interpret.c) Extended the string-appending scheme
       to addition of numbers to strings.
  - (ed.c) The 'Q'/'q' commands no longer clear the buffer before
       checking if the command was legal (Bug #0000046).
  - (ed.c) Corrected the doprnt() function so that the current line
       is never out of range (this could happen when giving 'Z' while
       at the end of the file). (Bug #0000045)

27-Mar-2004 (Lars Duening)  (3.3.503)
  - (strfuns, simulate.c) Added a function to make a c-string copy
       of a strbuf.
  - (mempools.c) Reduced the ideal size of a pool block to 128 bytes - 
       hopefully this reduces some of the fragmentation issues.
  - (mstrings, interpret.c) When adding strings (operators '+' and
       '+='), the driver tries to extend the left-hand string when
       possible, instead of allocating a new string. When creating
       large strings, this hopefully improves the reduces the allocations
       of new string buffers.
  - (interpret.c) inl_transfer_svalue() no longer makes untabled
       strings tabled. Originally the driver did this for volatile strings
       at this point, which no longer exist.

23-Mar-2004 (Lars Duening)  (3.3.502)
  - (actions.c) If the H_COMMAND lfun is not found in an object, the