@@ -63,18 +63,18 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 506)
-(Parent-Version lpmud 3-3 505)
+(Project-Version lpmud 3-3 507)
+(Parent-Version lpmud 3-3 506)
 (Version-Log "
-  - (prolang.y) Corrected range check regarding short integers (thanks,
-       Gnomi).
-  - (comm.c, pkg-mccp.c, mregex.c, structs.c) Removed warnings (thanks,
-       Andre!).
+  - (interpret.c) Implemented <mapping> &= <mapping>, <mapping> &= <vector>
+       (Bug #0000042).
+  - (interpret.c) get_line_number(): Increased the buffersize for the
+       program names (Bug #0000040).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Wed, 31 Mar 2004 21:06:09 -0700")
+(Checkin-Time "Thu, 01 Apr 2004 21:18:29 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -112,8 +112,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.70 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.569 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.340 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.570 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.341 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -202,13 +202,13 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.37 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.44 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.45 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.7 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.65 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.51 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.76 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.77 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
   (src/md5.c (lpmud/l/19_md5.c 1.7 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
@@ -264,7 +264,7 @@
   (src/ptmalloc.c (lpmud/c/b/46_ptmalloc.c 1.5 644))
   (src/ptmalloc/thread-m.h (lpmud/c/b/47_thread-m.h 1.6 644) :no-keywords)
   (src/ptmalloc/malloc.h (lpmud/c/b/48_malloc.h 1.1 644) :no-keywords)
-  (src/ptmalloc/malloc.c (lpmud/c/b/49_malloc.c 1.3.1.8 644) :no-keywords)
+  (src/ptmalloc/malloc.c (lpmud/c/b/49_malloc.c 1.3.1.9 644) :no-keywords)
   (src/ptmalloc/hooks.c (lpmud/c/b/50_hooks.c 1.2 644) :no-keywords)
   (src/ptmalloc/config.h (lpmud/c/b/51_config.h 1.1 644))
   (src/ptmalloc/arena.c (lpmud/d/b/1_arena.c 1.2 644) :no-keywords)
@@ -285,7 +285,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.4 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.54 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.55 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
